# openclaw

./: check-com-ports.ps1  check-esp32.ps1  claude-memory-1.11.1.tgz  debug-ssrf.txt  fix-json.cjs  fix-json10.cjs  fix-json11.cjs  fix-json12.cjs  fix-json2.cjs  fix-json3.cjs  fix-json4.cjs  fix-json5.cjs  fix-json6.cjs  fix-json7.cjs  fix-json8.cjs  fix-json9.cjs  fix-usb.ps1  list-devices.ps1  pnpm-lock.yaml  upload-esp32-v2.ps1  upload-esp32.ps1  wait-com3.ps1
ESP/: CMakeLists.txt  README.md  main.cpp  platformio.ini  sdkconfig.defaults
ESP/main/: CMakeLists.txt  Kconfig.projbuild  openclaw_node.h
docs/: esp32-sensor-integration.md
extensions/discord/src/monitor/: provider.ts  rest-fetch.ts
extensions/feishu/: index.ts  package.json
extensions/feishu/src/: media-tool.ts  preflight-audio.ts  tool-account.ts  types.ts
extensions/matrix/src/: directory-live.ts
scripts/: ui.js
skills/deep-audit/: SKILL.md
skills/deep-audit/references/: cvss.md  owasp-top10.md  vulnerability-patterns.md
skills/guanfu-org/: SKILL.md
skills/guanfu-org/references/: flowcharts.md  onboarding.md  policies.md  roles.md  templates.md
skills/hybrid-automation/: SKILL.md
skills/hybrid-automation/scripts/: helper.py
src/agents/: system-prompt.ts
src/auto-reply/reply/: mentions.ts
src/browser/: chrome.test.ts
src/config/: types.discord.ts  types.tts.ts  zod-schema.core.ts
src/discord/monitor/: provider.test.ts  provider.ts
src/gateway/: node-command-policy.ts
src/infra/: tmp-openclaw-dir.ts
src/plugins/: loader.ts
src/tts/: tts-core.ts  tts.ts
(+7 files in other folders)
